Update index with 3 articles

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <a href="https://itecsonline.com" class="cta-button">
                     Visit ITECS Main Site
                 </a>
-                <a href="https://itecsonline.com/contact" class="cta-button secondary">
+                <a href="https://itecsonline.com/contact-us" class="cta-button secondary">
                     Get Free Consultation
                 </a>
             </div>
@@ -301,11 +301,11 @@
                 <div class="stat-label">Free Resources</div>
             </div>
             <div class="stat-card">
-                <div class="stat-number">SEO</div>
-                <div class="stat-label">Optimized Content</div>
+                <div class="stat-number">MSP</div>
+                <div class="stat-label">Serving Dallas</div>
             </div>
             <div class="stat-card">
-                <div class="stat-number">2024</div>
+                <div class="stat-number">2025</div>
                 <div class="stat-label">Latest Insights</div>
             </div>
         </div>
@@ -365,7 +365,7 @@
                 <a href="https://itecsonline.com">Home</a>
                 <a href="https://itecsonline.com/services">Services</a>
                 <a href="https://itecsonline.com/about">About Us</a>
-                <a href="https://itecsonline.com/contact">Contact</a>
+                <a href="https://itecsonline.com/contact-us">Contact</a>
                 <a href="https://itecsonline.com/blog">Blog</a>
             </div>
             
