--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ITECS SEO Content Hub | Expert IT Insights & Resources</title>
+    <title>ITECS MSP Content Hub | Expert IT Insights & Resources</title>
     <meta name="description" content="Discover expert insights on IT services, cloud computing, cybersecurity, and digital transformation from ITECS. Free resources and guides for businesses.">
-    <meta name="keywords" content="IT services, cloud computing, cybersecurity, ITECS, technology insights, business resources">
+    <meta name="keywords" content="IT services, dallas, managed it services in dallas, cloud computing, cybersecurity, ITECS, technology insights, business resources">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="ITECS SEO Content Hub">
