--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ITECS SEO Content Hub | Expert IT Insights & Resources</title>
+    <title>ITECS MSP Content Hub | Expert IT Insights & Resources</title>
     <meta name="description" content="Discover expert insights on IT services, cloud computing, cybersecurity, and digital transformation from ITECS. Free resources and guides for businesses.">
     <meta name="keywords" content="IT services, cloud computing, cybersecurity, ITECS, technology insights, business resources">
     
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="ITECS SEO Content Hub">
+    <meta property="og:title" content="ITECS MSP Content Hub">
     <meta property="og:description" content="Expert IT insights and resources for modern businesses">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ITECS-Dallas.github.io/">
@@ -21,7 +21,7 @@
     {
   "@context": "https://schema.org",
   "@type": "Blog",
-  "name": "ITECS SEO Hub",
+  "name": "ITECS MSP Hub",
   "description": "Expert insights and resources from ITECS",
   "url": "https://ITECS-Dallas.github.io/",
   "blogPost": [
